hphp/test/slow/ext_xdebug/code_coverage_dead.php.expectf
Fatal error: XDEBUG_CC_UNUSED and XDEBUG_CC_DEAD_CODE constants are not currently supported. in %s/test/slow/ext_xdebug/code_coverage_dead.php on line 2
%w#0 xdebug_start_code_coverage(), called at [%s/hphp/test/slow/ext_xdebug/code_coverage_dead.php:2]
